# rocq-mcp-evolve

./: .gitignore  .nra.cache  README.md  STATUS.md  dune-project  rocq-mcp-evolve.opam  rocq-tools.opam
.github/workflows/: ci.yml
configs/: FROZEN.md  baseline_sonnet.json  ctx_lean_ex_fable.json  ctx_lean_fable.json  frozen.json  rocq_mcp.json  rocq_mcp_fair.json  rocq_mcp_fair_sonnet.json  rocq_mcp_sonnet.json  session.json  session_try.json  session_try_compact.json  session_try_hints.json  session_try_hints_auto.json  session_try_hints_auto_sonnet.json  session_try_hints_auto_sugg.json  session_try_hints_v2.json  session_try_search.json  sonnet_native.json  sonnet_native_auto2.json  team_k3.json  unified.json  unified_sonnet.json  universal.json  universal_fable.json  universal_sonnet.json  winner_auto2.json  winner_autofix.json  winner_ctx_full.json  winner_ctx_lean.json  winner_ctx_lean_ex.json  winner_ctx_lean_mc.json  winner_ctx_lean_ssr.json
data/manifests/: decomposable.jsonl  hard70.jsonl  inproject60.jsonl  mathcomp60.jsonl  minif2f_test.jsonl  sweep24.jsonl
docs/: ASSUMPTIONS.md  DESIGN.md  REPORT.md
harness/: common.py  dashboard.py  datasets.py  gate.py  make_decomposable_manifest.py  make_inproject_manifest.py  make_test_manifest.py  mcp_prewarm_proxy.py  plots.py  profile.py  project_args.py  repair_run.py  rocq_mcp_handshake_cache.json  run_eval.py  run_team.py  sweep.py
repro/: opam-packages.txt  setup.sh
scripts/: chain_after_baseline.sh  wait_then_run.sh
site/: index.html
src/baseline_server/: rocq_agent_baseline.ml
src/mcp_core/: mcp_server.ml  proc.ml
src/psession/: dune  rocq_agent_daemon.ml  rocq_agent_shim.ml  rocq_driver.ml
src/session_server/: dune  rocq_agent_session.ml  rocq_driver.ml
src/submit_server/: dune  rocq_agent_submit.ml
test/: ARCHITECTURE.md  dune  helpers.ml  test_daemon.ml  test_gate.py  test_perf.ml  test_session.ml
test/fixtures/: F1.v  F2.v  F3.v
